Fixed item edit widget. Updated bug report form.